Details
-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
None
-
5.4.0
-
None
-
ArchLinux i686
Description
Hello folks,
I have a problem with Sigil 0.8.4-1 (it uses Qt5) on ArchLinux 32bit:
https://www.archlinux.org/packages/community/i686/sigil/
Highlighting text (in Code View) is very slow. That happens only if I copied some text from other programms.
I made a video who shows this strange bug:
http://quellen.altervista.org/Sigil_qt_bug.mkv
The developer of Sigil says that maybe it's a Qt bug:
https://github.com/user-none/Sigil/issues/39#issuecomment-73254809
Attachments
Issue Links
- duplicates
-
QTBUG-38585 Delays with QClipboard and "useEventLoop"
-
- Closed
-
For Gerrit Dashboard: QTBUG-44849 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
250852,10 | xcb: Avoid repaint lags with DnD | 5.12 | qt/qtbase | Status: MERGED | +2 | 0 |